--- a/Django/portfolio/portfolio/templates/main/base.html
+++ b/Django/portfolio/portfolio/templates/main/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="{% static 'js/materialize.min.js' %}"></script>
 </head>
 <body>
