--- a/Django/portfolio/portfolio/templates/main/index.html
+++ b/Django/portfolio/portfolio/templates/main/index.html
@@ -14,8 +14,8 @@
                   <p></p>
                 </div>
                 <div class="card-action">
-                    <a href="#">GitHub</a>
-                    <a href="#">LinkedIn</a>
+                    <a href="https://github.com/soumyjain14" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/soumy-jain/" target="_blank">LinkedIn</a>
 
                 </div>
                 
@@ -25,8 +25,12 @@
         <div class="col s12 m8">
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
-                  <span class="card-title">Card Title</span>
-                  <p></p>
+                  <span class="card-title">About me</span>
+                  <p>
+                      Skilled in Java, Python and Machine Learning. Aspiring Software Engineer.😎<br>
+                      Around 8 months of work experience in working in firms like United Airlines, o9 Solutions.<br>
+                      Looking for oppurtunities as a Full-Stack Developer and Backend Developer ❤️.
+                  </p>
                 </div>
                 
               </div>
