--- a/Django/portfolio/portfolio/templates/main/nav.html
+++ b/Django/portfolio/portfolio/templates/main/nav.html
@@ -1,10 +1,9 @@
 <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Portfolio Website</a>
+      <a href="{% url 'home' %}" class="brand-logo">Portfolio Website</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="{% url 'projects' %}">Projects</a></li>
+        <li><a href="{% url 'languages' %}">Languages</a></li>
       </ul>
     </div>
   </nav>
